--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "chengfolio",
+  "name": "danielikpeportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://morganbb104.github.io/HW_20_Portfolio_withReact/",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -22,9 +21,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts --openssl-legacy-provider eject",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "browserslist": {
     "production": [
